# PWDManager

./: .gitignore  Cargo.toml  test.sqlite
src/: database.rs  main.rs
