[package]
name = "pwdmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.magic-crypt]
version = "*"
default-features = false

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]